# 3g-bridge

./: 3GBridge.typemap  3GBridge.wsdl  3GBridgeMonitor.typemap  3GBridgeMonitor.wsdl  3GBridgeSubmitter.typemap  3GBridgeSubmitter.wsdl  3g-bridge-sl4.spec.in  3g-bridge.spec.in  AUTHORS  AlgQueue.cpp  AlgQueue.h  BackendException.cpp  BackendException.h  Bridge.cpp  Bridge.h  CGAlg.h  CGAlgQueue.cpp  CGAlgQueue.h  CGJob.cpp  CGJob.h  CGManager.cpp  CGManager.h  CGQueueManager.cpp  CGQueueManager.h  CGSqlStruct.h  ChangeLog  Conf.cpp  Conf.h  DBHandler.cpp  DBHandler.h  DCAPIHandler.cpp  DCAPIHandler.h  DCAPIHandlerSingle.cpp  DCAPIHandlerSingle.h  DLException.cpp  DLException.h  DownloadManager.cpp  DownloadManager.h  EGEEHandler.cpp  EGEEHandler.h  (+66 more)
cf/: egee.m4  java.m4
db/: add-job-log.sql  algqueue-fix.txt  constriants.sql  data.sql  egi-accounting.sql  monlog-boinc-indexes.sql  purge.sql  schema-add-metajob.sql  schema-update-1.5.sql  schema-update-1.6.sql  schema-update-1.7.sql  schema-update-2.0.sql  schema-update.sql  schema.sql
debian/: 3g-bridge-qm.default  3g-bridge-qm.examples  3g-bridge-qm.init  3g-bridge-qm.install  3g-bridge-qm.manpages  3g-bridge-ws.init  3g-bridge-ws.install  3g-bridge-ws.manpages  3g-bridge-wsclient.install  3g-bridge-wsclient.manpages  3g-bridge.conf  3g-bridge.config  3g-bridge.default  3g-bridge.dirs  3g-bridge.docs  3g-bridge.init  3g-bridge.install  3g-bridge.manpages  3g-bridge.postinst  3g-bridge.postrm  3g-bridge.prerm  3g-bridge.templates  bridge.conf  changelog  control  copyright  master-all.xml  master-ws.xml  master.xml  rules
doc/: 3g-bridge.8.xml  3g-bridge.conf.5.xml  3g-bridge.plugin-xtremweb.7.xml  3g-bridge.xtremweb-plugin.7.xml  Internal_Architecture.odp  Makefile.am  OnLab.tex  README-BOINC2EGEE  README-EC2  README-METAJOB  doxygen.cfg  doxygen.cfg.in  injector.1.xml  jobwrapper_client.xml  user_manual.tex  wsclient.1.xml  wsmonitor.8.xml  wsmonitorclient.1.xml  wssubmitter.8.xml
etc/: 3g-bridge.conf  3g-bridge.init  3g-bridge.logrotate  bridge.conf.sample
examples/: NullHandler.java  batch_pack  batch_unpack  body  dc-api.conf  head  resource-manager.sh  tail
examples/hu/sztaki/lpds/G3Bridge/plugin/null/: NullHandler.java
plugins/: BOINC_monitor.cpp  BOINC_monitor.h  DC-API-Single_handler.cpp  DC-API-Single_handler.h  DC-API_handler.cpp  DC-API_handler.h  DLEvents.cpp  DLEvents.h  DLItem.cpp  DLItem.h  DownloadManager.cpp  DownloadManager.h  EC2Handler.cpp  EC2Handler.h  EC2Util.cpp  EC2Util.h  EC2_handler.cpp  EC2_handler.h  EGEE_handler.cpp  EGEE_handler.h  FP_queries.cpp  FP_queries.h  ForeignProbe.cpp  ForeignProbe.h  Java_handler.cpp  Java_handler.h  MJ_parser.cpp  MJ_parser.h  Makefile.am  Metajob_handler.cpp  Metajob_handler.h  Null_handler.cpp  Null_handler.h  Null_monitor.cpp  Null_monitor.h  XTREMWEB_handler.cpp  XTREMWEB_handler.h  autoarray  symbols.exp
plugins/hu/sztaki/lpds/G3Bridge/: FileRef.java  GridHandler.java  Job.java  LogLevel.java  Logger.java  RuntimeBridgeException.java
plugins/hu/sztaki/lpds/G3Bridge/plugin/bes/: BESHandler.java  JsdlDocBuilder.java  WrapperBuilder.java
plugins/hu/sztaki/lpds/G3Bridge/plugin/xwch/: XWCHHandler.java  md5verification.java
python/: Makefile.am  setup.py.in  wsmonitor  wsmonitorclient
python/G3Bridge/: DC_API_Monitor.py  DC_API_SINGLE_Monitor.py  DC_API_Single_Monitor.py  G3BridgeMonitor.py  GridMonitor.py  __init__.py
soap/: .keepme
webinterface/: .htaccess  3gb.php  README  admin_handlers.inc.php  auth.inc.php  auth.php  basic_handlers.inc.php  common.inc.php  common.php  config.inc.php  db.inc.php  db.php  egi_accounting.inc.php  error.inc.php  error.php  log.inc.php  rest_base.inc.php  rest_parser.inc.php  rest_renderer.inc.php  restbase.php  sandbox.php
webinterface/ui/: bridge.css  index.html  pub-mj.json  pub.json
